--- a/AutoMapRoom/AutoMapRoom.csproj
+++ b/AutoMapRoom/AutoMapRoom.csproj
@@ -1,14 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
     <!-- Mod and assembly info. These also determine the metadata for Thunderstore and whatnot. -->
     <PropertyGroup>
-        <!-- Also set as plugin GUID -->
-        <ProjectGuid>s0apy.AutoMapRoom</ProjectGuid>
-
-        <!-- Also set as plugin name -->
+        <Authors>s0apy.AutoMapRoom</Authors>
         <Product>AutoMapRoom</Product>
-
-        <!-- Also set as plugin version and Thunderstore package version -->
-        <Version>1.1.2</Version>
+        <Version>1.1.3</Version>
         <PackageId>AutoMapRoom</PackageId>
     </PropertyGroup>
 
@@ -26,6 +21,7 @@
     </PropertyGroup>
     
     <PropertyGroup>
+        <AtlyssPath>..\..\..\..\..\SteamLibrary\steamapps\common\ATLYSS</AtlyssPath>
         <AtlyssManaged>$(AtlyssPath)/ATLYSS_Data/Managed/</AtlyssManaged>
     </PropertyGroup>
 
@@ -39,35 +35,16 @@
             <PrivateAssets>all</PrivateAssets>
         </PackageReference>
         
-        <Reference Include="$(AtlyssManaged)Assembly-CSharp.dll" Publicize="true" Private="False" />
         <Reference Include="$(AtlyssManaged)UnityEngine.UI.dll" Private="False" />
         <Reference Include="$(AtlyssManaged)Newtonsoft.Json.dll" Private="False" />
-        <Reference Include="$(AtlyssManaged)Mirror.dll" Private="False" />
         <Reference Include="$(AtlyssManaged)com.rlabrecque.steamworks.net.dll" Private="False" />
-        <Reference Include="Assembly-CSharp">
-          <HintPath>..\..\..\..\..\SteamLibrary\steamapps\common\ATLYSS\ATLYSS_Data\Managed\Assembly-CSharp.dll</HintPath>
-        </Reference>
-        <Reference Include="com.rlabrecque.steamworks.net">
-          <HintPath>..\..\..\..\..\SteamLibrary\steamapps\common\ATLYSS\ATLYSS_Data\Managed\com.rlabrecque.steamworks.net.dll</HintPath>
-        </Reference>
-        <Reference Include="FizzySteamworks">
-          <HintPath>..\..\..\..\..\SteamLibrary\steamapps\common\ATLYSS\ATLYSS_Data\Managed\FizzySteamworks.dll</HintPath>
-        </Reference>
-        <Reference Include="Mirror">
-          <HintPath>..\..\..\..\..\SteamLibrary\steamapps\common\ATLYSS\ATLYSS_Data\Managed\Mirror.dll</HintPath>
-        </Reference>
-        <Reference Include="UnityEngine.CoreModule">
-          <HintPath>..\..\..\..\..\SteamLibrary\steamapps\common\ATLYSS\ATLYSS_Data\Managed\UnityEngine.CoreModule.dll</HintPath>
-        </Reference>
-        <Reference Include="UnityEngine.IMGUIModule">
-          <HintPath>..\..\..\..\..\SteamLibrary\steamapps\common\ATLYSS\ATLYSS_Data\Managed\UnityEngine.IMGUIModule.dll</HintPath>
-        </Reference>
-        <Reference Include="UnityEngine.InputLegacyModule">
-          <HintPath>..\..\..\..\..\SteamLibrary\steamapps\common\ATLYSS\ATLYSS_Data\Managed\UnityEngine.InputLegacyModule.dll</HintPath>
-        </Reference>
-        <Reference Include="UnityEngine.TextRenderingModule">
-          <HintPath>..\..\..\..\..\SteamLibrary\steamapps\common\ATLYSS\ATLYSS_Data\Managed\UnityEngine.TextRenderingModule.dll</HintPath>
-        </Reference>
+        <Reference Include="$(AtlyssManaged)Assembly-CSharp.dll" Private="False" />
+        <Reference Include="$(AtlyssManaged)FizzySteamworks.dll" Private="False" />
+        <Reference Include="$(AtlyssManaged)Mirror.dll" Private="False" />
+        <Reference Include="$(AtlyssManaged)UnityEngine.CoreModule.dll" Private="False" />
+        <Reference Include="$(AtlyssManaged)UnityEngine.IMGUIModule.dll" Private="False" />
+        <Reference Include="$(AtlyssManaged)UnityEngine.InputLegacyModule.dll" Private="False" />
+        <Reference Include="$(AtlyssManaged)UnityEngine.TextRenderingModule.dll" Private="False" />
 
         <!-- Reference mod packages from Thunderstore like this (works as if it's a NuGet package): -->
         <!--
