--- a/AutoMod/Directory.Build.props
+++ b/AutoMod/Directory.Build.props
@@ -8,7 +8,7 @@
     <PropertyGroup>
         <!-- Create a package? -->
         <CreateThunderstorePackage>true</CreateThunderstorePackage>
-        <ThunderstorePackageName>AutoMod</ThunderstorePackageName>
+        <ThunderstorePackageName>AutoModeration</ThunderstorePackageName>
         <ThunderstoreTeamName>s0apy</ThunderstoreTeamName>
         <ThunderstorePackageDescription>Automods like Discord!</ThunderstorePackageDescription>
         <ThunderstoreWebsite>https://store.steampowered.com/app/2768430/ATLYSS/</ThunderstoreWebsite>
