--- a/AutoMod/AutoModeration.csproj
+++ b/AutoMod/AutoModeration.csproj
@@ -1,9 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
     <!-- Mod and assembly info. These also determine the metadata for Thunderstore and whatnot. -->
     <PropertyGroup>
-        <Authors>com.s0apy.AutoModeration</Authors>
+        <Authors>com.AutoModeration</Authors>
         <Product>Auto Moderation</Product>
-        <Version>1.0.3</Version>
+        <Version>1.0.4</Version>
         <PackageId>Auto Moderation</PackageId>
     </PropertyGroup>
 
