--- a/AutoMod/RoleplayTitles.csproj
+++ b/AutoMod/RoleplayTitles.csproj
@@ -1,10 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
     <!-- Mod and assembly info. These also determine the metadata for Thunderstore and whatnot. -->
     <PropertyGroup>
-        <Authors>com.AutoModeration</Authors>
-        <Product>Auto Moderation</Product>
-        <Version>1.0.4</Version>
-        <PackageId>Auto Moderation</PackageId>
+        <Authors>com.RoleplayTitles.sftwre</Authors>
+        <Product>Roleplay Titles</Product>
+        <Version>1.0.0</Version>
+        <PackageId>Roleplay Titles</PackageId>
     </PropertyGroup>
 
     <!-- Generic assembly info. -->
@@ -45,11 +45,7 @@
         <Reference Include="$(AtlyssManaged)UnityEngine.IMGUIModule.dll" Private="False" />
         <Reference Include="$(AtlyssManaged)UnityEngine.InputLegacyModule.dll" Private="False" />
         <Reference Include="$(AtlyssManaged)UnityEngine.TextRenderingModule.dll" Private="False" />
-
-        <!-- Reference mod packages from Thunderstore like this (works as if it's a NuGet package): -->
-        <!--
-        <PackageReference Include="Nessie-EasySettings" Version="1.1.3" Private="False" />
-        -->
+        <PackageReference Include="Soggy_Pancake-CodeYapper" Version="2.0.0" Private="False" />
     </ItemGroup>
 
     <ItemGroup>
