Linux - not pub push

--- a/RPNames/RPNames.csproj
+++ b/RPNames/RPNames.csproj
@@ -21,7 +21,7 @@
     </PropertyGroup>
     
     <PropertyGroup>
-        <AtlyssPath>..\..\..\..\..\SteamLibrary\steamapps\common\ATLYSS</AtlyssPath>
+        <AtlyssPath>..\..\..\..\..\..\..\..\..\home\soap\.local\share\Steam\steamapps\common\ATLYSS</AtlyssPath>
         <AtlyssManaged>$(AtlyssPath)\ATLYSS_Data\Managed\</AtlyssManaged>
     </PropertyGroup>
 
