--- a/RPNames/RPNames.csproj
+++ b/RPNames/RPNames.csproj
@@ -3,7 +3,7 @@
     <PropertyGroup>
         <Authors>s0apy.RPNames.sftwre</Authors>
         <Product>RPNames</Product>
-        <Version>1.3.8</Version>
+        <Version>1.3.9</Version>
         <PackageId>RPNames</PackageId>
     </PropertyGroup>
 
@@ -46,7 +46,7 @@
         <Reference Include="$(AtlyssManaged)UnityEngine.IMGUIModule.dll" Private="False" />
         <Reference Include="$(AtlyssManaged)UnityEngine.InputLegacyModule.dll" Private="False" />
         <Reference Include="$(AtlyssManaged)UnityEngine.TextRenderingModule.dll" Private="False" />
-        <PackageReference Include="Soggy_Pancake-CodeYapper" Version="2.0.0" Private="False" />
+        <PackageReference Include="Soggy_Pancake-CodeYapper" Version="2.1.*" Private="False" />
     </ItemGroup>
 
     <ItemGroup>
